--- a/pizza-time/.env
+++ b/pizza-time/.env
@@ -1,7 +1,7 @@
-REACT_APP_FIREBASE_KEY = AIzaSyCjU4N1VCsd1VHd7D49MsfjMGF9lnnBuR4
-REACT_APP_FIREBASE_DOMAIN = pizza-2041d.firebaseapp.com
-REACT_APP_FIREBASE_DATABASE = https://pizza-2041d.firebaseio.com
-REACT_APP_FIREBASE_PROJECT_ID = pizza-2041d
-REACT_APP_FIREBASE_STORAGE_BUCKET = pizza-2041d.appspot.com
-REACT_APP_FIREBASE_SENDER_ID = 430238502759
-REACT_APP_APP_ID = 1:430238502759:web:5eb3c3e5321a54ca
+REACT_APP_FIREBASE_KEY = AIzaSyCitaEbYQsGXYRnuUk0PthEzuwuTmV37PQ
+REACT_APP_FIREBASE_DOMAIN = pizza-240016.firebaseapp.com
+REACT_APP_FIREBASE_DATABASE = https://pizza-240016.firebaseio.com
+REACT_APP_FIREBASE_PROJECT_ID = pizza-240016
+REACT_APP_FIREBASE_STORAGE_BUCKET = pizza-240016.appspot.com
+REACT_APP_FIREBASE_SENDER_ID = 1014109016940
+REACT_APP_APP_ID = 1:1014109016940:web:2c2d81bf0317d70f
