--- a/pizza-time/package.json
+++ b/pizza-time/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "firebase": "^6.0.2",
     "react": "^16.8.6",
+    "react-addons-css-transition-group": "^15.6.2",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
