--- a/pizza-time/package.json
+++ b/pizza-time/package.json
@@ -7,6 +7,7 @@
     "firebase": "^6.0.2",
     "react": "^16.8.6",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-calendar": "^2.19.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
