add participants module to eventView, add moment js for calendar time conversion, restructure event view to fetch the id from the url paramater

--- a/pizza-time/package.json
+++ b/pizza-time/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.18.0",
     "firebase": "^6.0.2",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-addons-css-transition-group": "^15.6.2",
     "react-calendar": "^2.19.0",
