--- a/pizza-time/package.json
+++ b/pizza-time/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.6",
+    "@material-ui/core": "^4.0.0",
     "axios": "^0.18.0",
     "firebase": "^6.0.2",
     "react": "^16.8.6",
