--- a/pizza-time/.env
+++ b/pizza-time/.env
@@ -5,3 +5,4 @@ REACT_APP_FIREBASE_PROJECT_ID = pizza-240016
 REACT_APP_FIREBASE_STORAGE_BUCKET = pizza-240016.appspot.com
 REACT_APP_FIREBASE_SENDER_ID = 1014109016940
 REACT_APP_APP_ID = 1:1014109016940:web:2c2d81bf0317d70f
+REACT_APP_BACK_END_URL= http://localhost:5500
