--- a/pizza-time/package.json
+++ b/pizza-time/package.json
@@ -10,6 +10,7 @@
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-bootstrap": "^1.0.0-beta.8",
     "react-calendar": "^2.19.0",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
