--- a/pizza-time/package.json
+++ b/pizza-time/package.json
@@ -16,6 +16,9 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-tabs": "^3.0.0",
+    "redux": "^4.0.1",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.2.0"
   },
   "scripts": {
