--- a/pizza-time/package.json
+++ b/pizza-time/package.json
@@ -14,14 +14,14 @@
     "react-calendar": "^2.19.0",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.3",
-    "react-router-dom": "^5.0.0",
+    "react-router": "^5.0.1",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "react-tabs": "^3.0.0",
     "redux": "^4.0.1",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.2.0"
-
   },
   "scripts": {
     "start": "react-scripts start",
