--- a/pizza-time/package.json
+++ b/pizza-time/package.json
@@ -14,6 +14,7 @@
     "react-calendar": "^2.19.0",
     "react-dom": "^16.8.6",
     "react-moment": "^0.9.2",
+    "google-map-react": "1.1.4",
     "react-redux": "^7.0.3",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
