--- a/pizza-time/package.json
+++ b/pizza-time/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "@date-io/date-fns": "^1.3.6",
     "@material-ui/core": "^4.0.0",
+    "auth": "^0.0.9",
     "axios": "^0.19.0",
-    "firebase": "^6.0.2",
+    "firebase": "^6.2.4",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-addons-css-transition-group": "^15.6.2",
