--- a/pizza-time/package.json
+++ b/pizza-time/package.json
@@ -7,6 +7,7 @@
     "@material-ui/core": "^4.0.0",
     "auth": "^0.0.9",
     "axios": "^0.19.0",
+    "dotenv": "^8.0.0",
     "firebase": "^6.2.4",
     "moment": "^2.24.0",
     "react": "^16.8.6",
