--- a/pizza-time/package.json
+++ b/pizza-time/package.json
@@ -23,9 +23,11 @@
     "react-share": "^3.0.0",
     "react-tabs": "^3.0.0",
     "redux": "^4.0.1",
-    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "styled-components": "^4.2.0"
+  },
+  "devDependencies": {
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
